--- a/Docker/Nginx_Conf/Task12/nginx/conf.d/redblue.conf
+++ b/Docker/Nginx_Conf/Task12/nginx/conf.d/redblue.conf
@@ -1,20 +1,20 @@
-# server {
-# 	listen 8082; 
-# 	server_name musiify.site;
+server {
+	listen 8082; 
+	server_name musiify.site;
 
-#    location / {
-# 	root /var/www/task3/html/redblue; 
-# 	try_files $uri /bluepage.html; 
-# 	add_header Content-Type text/html;
-#     }
-# }
-# server {
-# 	listen 8081;
-# 	server_name musiify.site;
+   location / {
+	root /var/www/task3/html/redblue; 
+	try_files $uri /bluepage.html; 
+	add_header Content-Type text/html;
+    }
+}
+server {
+	listen 8081;
+	server_name musiify.site;
 	
-# 	location / {
-# 	   root /var/www/task3/html/redblue;
-# 	   try_files $uri /redpage.html;
-# 	   add_header Content-Type text/html;
-# 	}
-# }
+	location / {
+	   root /var/www/task3/html/redblue;
+	   try_files $uri /redpage.html;
+	   add_header Content-Type text/html;
+	}
+}
