--- a/Docker/Apache_Conf/Dockerfile
+++ b/Docker/Apache_Conf/Dockerfile
@@ -1,13 +1,17 @@
-FROM httpd:alpine
+# Используем официальный образ Apache
+FROM httpd:2.4-alpine
 
-# Устанавливаем необходимые модули, если нужно
-RUN apk add --no-cache php7 php7-fpm
+# Обновляем пакеты и устанавливаем необходимые модули
+RUN apk update && apk add --no-cache bash
 
-# Копируем конфигурационные файлы Apache
-COPY ./000-default.conf /usr/local/apache2/conf/httpd.conf
+# Копируем конфигурацию Apache в контейнер
+COPY ./Apache_Conf/000-default.conf /usr/local/apache2/conf/httpd.conf
 
-# Копируем HTML файлы в директорию DocumentRoot
-COPY ./html/ /var/www/task3/html/
+# Копируем файлы в нужную директорию веб-сервера
+COPY ./Apache_Conf/html/ /usr/local/apache2/htdocs/
 
-# Expose the port Apache will listen on
+# Открываем порт 8080 для прослушивания запросов
 EXPOSE 8080
+
+# Запускаем Apache в режиме фореграунд
+CMD ["httpd-foreground"]
