--- a/Docker/Nginx_Conf/Task12/nginx/conf.d/main.conf
+++ b/Docker/Nginx_Conf/Task12/nginx/conf.d/main.conf
@@ -5,17 +5,16 @@ upstream redblue {
 }
 # HTTPS server configuration
 server {
-    # listen 443 ssl;
-    # listen [::]:443 ssl;
+    listen 443 ssl;
+    listen [::]:443 ssl;
     server_name musiify.site;
-    listen 80;
     root /var/www/task3/html;
     index status.html index.html index.htm index.nginx-debian.html secondpage.html imagesnew.jpeg images.png testjpeg.jpeg testpng.png;
-
-    # ssl_certificate /etc/letsencrypt/fullchain.pem; # managed by Certbot
-    # ssl_certificate_key /etc/letsencrypt/privkey.pem; # managed by Certbot
-    # include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-    # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
++
+    ssl_certificate /etc/letsencrypt/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
     location / {
         try_files $uri $uri/ =404;
