--- a/Docker/Nginx_Conf/Task12/Dockerfile
+++ b/Docker/Nginx_Conf/Task12/Dockerfile
@@ -1,4 +1,4 @@
-FROM nginx:alpine
+FROM nginx:1.26.2-alpine
 
 RUN apk update
 RUN rm /etc/nginx/conf.d/default.conf
@@ -8,7 +8,9 @@ COPY ./letsencrypt/ /etc/letsencrypt/
 COPY ./var/www/ /var/www/
 COPY ./nginx/nginx.conf /etc/nginx/
 
-RUN chown -R nginx:nginx /etc/nginx /etc/letsencrypt /var/www && \
-    chmod -R 755 /etc/nginx /etc/letsencrypt /var/www
+RUN chown -R nginx:nginx /etc/nginx /etc/letsencrypt /var/www /var/cache/nginx/ /var/log/nginx /run && \
+    chmod -R 755 /etc/nginx /etc/letsencrypt /var/www /var/cache/nginx/ /var/log/nginx /run
 
-EXPOSE 443
+USER nginx
+
+EXPOSE  443
