--- a/Docker/Nginx_Conf/Task12/docker-compose.yml
+++ b/Docker/Nginx_Conf/Task12/docker-compose.yml
@@ -1,7 +1,8 @@
 version: '3.8'
 services:
   custom-nginx:
-    image: imaslice/custom-nginx:latest
+    build:
+      dockerfile: Dockerfile
     ports:
       - "80:80"
       - "443:443"
