Change Apache Configuration

--- a/Docker/Apache_Conf/Dockerfile
+++ b/Docker/Apache_Conf/Dockerfile
@@ -5,10 +5,10 @@ FROM httpd:2.4-alpine
 RUN apk update && apk add --no-cache bash
 
 # Копируем конфигурацию Apache в контейнер
-COPY ./Apache_Conf/000-default.conf /usr/local/apache2/conf/httpd.conf
+COPY 000-default.conf /usr/local/apache2/conf/httpd.conf
 
 # Копируем файлы в нужную директорию веб-сервера
-COPY ./Apache_Conf/html/ /usr/local/apache2/htdocs/
+COPY context/ /usr/local/apache2/htdocs/
 
 # Открываем порт 8080 для прослушивания запросов
 EXPOSE 8080
