--- a/Docker/Nginx_Conf/Task12/nginx/conf.d/main.conf
+++ b/Docker/Nginx_Conf/Task12/nginx/conf.d/main.conf
@@ -23,6 +23,13 @@ server {
         return 500;
     }
 
+    location /info.php {
+        proxy_pass http://custom-apache:8080/info.php;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
     location /redblue {
         proxy_pass http://redblue;
         proxy_set_header Host $host;
@@ -42,6 +49,7 @@ server {
     location ~* ^/image2/.*\.jpeg$ {
         alias /var/www/task3/html/image2/;
         autoindex on;
+	image_filter rotate 180;
         try_files $uri /imagesnew.jpeg =404;
     }
 
