--- a/Docker/Apache_Conf/000-default.conf
+++ b/Docker/Apache_Conf/000-default.conf
@@ -1,7 +1,8 @@
 LoadModule mpm_prefork_module modules/mod_mpm_prefork.so
 LoadModule authz_core_module modules/mod_authz_core.so
 LoadModule log_config_module modules/mod_log_config.so
-
+ServerName 54.226.183.243
+Listen 8080
 
 <VirtualHost *:8080>
 	# The ServerName directive sets the request scheme, hostname and port that
@@ -12,9 +13,8 @@ LoadModule log_config_module modules/mod_log_config.so
 	# value is not decisive as it is used as a last resort host regardless.
 	# However, you must set it for any further virtual host explicitly.
 	#ServerName www.example.com
-
 	ServerAdmin webmaster@localhost
-	ServerName localhost
+	ServerName 54.226.183.243
 	DocumentRoot /var/www/task3/html
 	<Directory /var/www/task3/html>
 	    Options Indexes FollowSymLinks
@@ -27,8 +27,8 @@ LoadModule log_config_module modules/mod_log_config.so
 	# modules, e.g.
 	#LogLevel info ssl:warn
 
-	ErrorLog /var/log/apache2/error.log
-	CustomLog /var/log/apache2/access.log combined
+	ErrorLog /usr/local/apache2/logs/error.log
+	CustomLog /usr/local/apache2/logs/access.log combined
 
 	# For most configuration files from conf-available/, which are
 	# enabled or disabled at a global level, it is possible to
@@ -39,3 +39,4 @@ LoadModule log_config_module modules/mod_log_config.so
 </VirtualHost>
 
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
+
