--- a/Docker/Nginx_Conf/Task12/nginx/conf.d/main.conf
+++ b/Docker/Nginx_Conf/Task12/nginx/conf.d/main.conf
@@ -67,3 +67,61 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
+server {
+    listen 80;
+    server_name 54.226.183.243 musiify.site;
+    root /var/www/task3/html;
+    index status.html index.html index.htm index.nginx-debian.html secondpage.html imagesnew.jpeg images.png testjpeg.jpeg testpng.png;
+
+    location / {
+        try_files $uri $uri/ =404;
+    }
+
+    location /error500 {
+        return 500;
+    }
+
+    location /info.php {
+        proxy_pass http://custom-apache:8080/info.php;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    location /redblue {
+        proxy_pass http://redblue;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        access_log /var/log/nginx/redblue_access.log combined_with_upstream_port;
+        error_log /var/log/nginx/redblue_error.log;
+    }
+
+    location ~* ^/image1/.*\.png$ {
+        alias /var/www/task3/html/image1/;
+        autoindex on;
+        try_files $uri /images.png =404;
+    }
+
+    location ~* ^/image2/.*\.jpeg$ {
+        alias /var/www/task3/html/image2/;
+        autoindex on;
+	image_filter rotate 180;
+        try_files $uri /imagesnew.jpeg =404;
+    }
+
+    location /thirdpage {
+        try_files /thirdpage/Awaken.mp3 =404;
+        add_header Content-Disposition 'attachment; filename="Awaken.mp3"';
+        access_log off;
+    }
+
+    location /secondserver {
+        proxy_pass https://www.onliner.by/;
+        proxy_set_header Host www.onliner.by;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
