--- a/Docker/Apache_Conf/000-default.conf
+++ b/Docker/Apache_Conf/000-default.conf
@@ -1,19 +1,53 @@
-LoadModule mpm_prefork_module modules/mod_mpm_prefork.so
-LoadModule authz_core_module modules/mod_authz_core.so
-LoadModule log_config_module modules/mod_log_config.so
-ServerName 54.226.183.243
+# LoadModule mpm_prefork_module modules/mod_mpm_prefork.so
+# LoadModule authz_core_module modules/mod_authz_core.so
+# LoadModule log_config_module modules/mod_log_config.so
+# ServerName 54.226.183.243
+# Listen 8080
+
+# <VirtualHost *:8080>
+# 	ServerAdmin webmaster@localhost
+# 	ServerName 54.226.183.243
+# 	DocumentRoot /var/www/task3/html
+# 	<Directory /var/www/task3/html>
+# 	    Options Indexes FollowSymLinks
+# 	    AllowOverride All
+# 	    Require all granted
+# 	</Directory>
+
+# 	ErrorLog /usr/local/apache2/logs/error.log
+# 	CustomLog /usr/local/apache2/logs/access.log combined
+# </VirtualHost>
+# Основной конфигурационный файл Apache
+ServerRoot "/etc/httpd"  # Убедитесь, что путь к ServerRoot соответствует вашему окружению
+
+# Порт, на котором Apache будет слушать входящие подключения
 Listen 8080
 
-<VirtualHost *:8080>
-	ServerAdmin webmaster@localhost
-	ServerName 54.226.183.243
-	DocumentRoot /var/www/task3/html
-	<Directory /var/www/task3/html>
-	    Options Indexes FollowSymLinks
-	    AllowOverride All
-	    Require all granted
-	</Directory>
+# Модуль загрузки (загрузим базовые модули)
+LoadModule mpm_event_module modules/mod_mpm_event.so
+LoadModule dir_module modules/mod_dir.so
+LoadModule mime_module modules/mod_mime.so
+LoadModule log_config_module modules/mod_log_config.so
+LoadModule alias_module modules/mod_alias.so
 
-	ErrorLog /usr/local/apache2/logs/error.log
-	CustomLog /usr/local/apache2/logs/access.log combined
-</VirtualHost>
+# Настройки сервера
+ServerAdmin webmaster@localhost
+DocumentRoot "/var/www/html"  # Путь к корневой директории веб-документов
+
+# Убедитесь, что в директории "/var/www/html" есть файл index.html
+<Directory "/var/www/html">
+    AllowOverride None
+    Require all granted
+</Directory>
+
+# Имя сервера (доменное имя)
+ServerName localhost
+
+# Лог-файлы для отслеживания ошибок и запросов
+ErrorLog "/var/log/httpd/error_log"
+CustomLog "/var/log/httpd/access_log" common
+
+# Настройка индексации директорий (опционально)
+<IfModule dir_module>
+    DirectoryIndex index.html
+</IfModule>
