--- a/Docker/Apache_Conf/Dockerfile
+++ b/Docker/Apache_Conf/Dockerfile
@@ -1,15 +1,24 @@
 FROM httpd:2.4.62-alpine
 
+# Обновляем пакеты
 RUN apk update
 
-COPY ./000-default.conf /etc/apache2/sites-available/
+# Копируем конфигурацию Apache (заменим путь на корректный для Alpine Linux)
+COPY ./000-default.conf /usr/local/apache2/conf/
 
-COPY ./var/var/www/ /var/www/
+# Копируем сайт в директорию /var/www/html
+COPY ./var/var/www/ /usr/local/apache2/htdocs/
 
+# Создаем директорию для логов и устанавливаем права
 RUN mkdir -p /usr/local/apache2/logs && \
-    chown -R www-data:www-data /var/www/task3 /usr/local/apache2/logs && \
-    chmod -R 755 /var/www/task3 /usr/local/apache2/logs
+    chown -R www-data:www-data /usr/local/apache2/htdocs/ /usr/local/apache2/logs && \
+    chmod -R 755 /usr/local/apache2/htdocs/ /usr/local/apache2/logs
 
+# Используем стандартного пользователя для Apache
 USER www-data
 
+# Экспонируем порт 8080
 EXPOSE 8080
+
+# Запускаем Apache
+CMD ["httpd-foreground"]
