--- a/Docker/Apache_Conf/Dockerfile
+++ b/Docker/Apache_Conf/Dockerfile
@@ -17,8 +17,8 @@
 # CMD ["httpd-foreground"]
 FROM ubuntu 
 RUN apt update 
-RUN apt install –y apache2 
-RUN apt install –y apache2-utils 
+RUN apt install -y apache2 
+RUN apt install -y apache2-utils 
 RUN apt clean
 EXPOSE 80
 CMD [“apache2ctl”, “-D”, “FOREGROUND”]
