--- a/Docker/Apache_Conf/000-default.conf
+++ b/Docker/Apache_Conf/000-default.conf
@@ -1,35 +1,20 @@
-# LoadModule mpm_prefork_module modules/mod_mpm_prefork.so
-# LoadModule authz_core_module modules/mod_authz_core.so
-# LoadModule log_config_module modules/mod_log_config.so
-# ServerName 54.226.183.243
-# Listen 8080
+LoadModule mpm_prefork_module modules/mod_mpm_prefork.so
+LoadModule authz_core_module modules/mod_authz_core.so
+LoadModule log_config_module modules/mod_log_config.so
+ServerName custom-apache
+Listen 8080
 
-# <VirtualHost *:8080>
-# 	ServerAdmin webmaster@localhost
-# 	ServerName 54.226.183.243
-# 	DocumentRoot /var/www/task3/html
-# 	<Directory /var/www/task3/html>
-# 	    Options Indexes FollowSymLinks
-# 	    AllowOverride All
-# 	    Require all granted
-# 	</Directory>
-
-# 	ErrorLog /usr/local/apache2/logs/error.log
-# 	CustomLog /usr/local/apache2/logs/access.log combined
-# </VirtualHost>
 <VirtualHost *:8080>
-    ServerAdmin webmaster@localhost
-    DocumentRoot /var/www/html
-    
-    # Укажите ваш IP-адрес
-    ServerName 54.226.183.243
+	ServerAdmin webmaster@localhost
+	ServerName custom-apache
+	DocumentRoot /var/www/task3/html
+	<Directory /var/www/task3/html>
+	    Options Indexes FollowSymLinks
+	    AllowOverride All
+	    Require all granted
+	</Directory>
 
-    <Directory /var/www/html>
-        Options Indexes FollowSymLinks
-        AllowOverride None
-        Require all granted
-    </Directory>
-
-    ErrorLog ${APACHE_LOG_DIR}/error.log
-    CustomLog ${APACHE_LOG_DIR}/access.log combined
+	ErrorLog /usr/local/apache2/logs/error.log
+	CustomLog /usr/local/apache2/logs/access.log combined
 </VirtualHost>
+
