--- a/Docker/Apache_Conf/000-default.conf
+++ b/Docker/Apache_Conf/000-default.conf
@@ -1,19 +1,21 @@
-LoadModule mpm_prefork_module modules/mod_mpm_prefork.so
 LoadModule authz_core_module modules/mod_authz_core.so
 LoadModule log_config_module modules/mod_log_config.so
-ServerName custom-apache
+
+ServerName localhost
 Listen 8080
 
 <VirtualHost *:8080>
 	ServerAdmin webmaster@localhost
-	ServerName custom-apache
-	DocumentRoot /var/www/task3/html
-	<Directory /var/www/task3/html>
+	ServerName localhost
+	DocumentRoot /usr/local/apache2/htdocs/var/www/task3/html
+	<Directory /usr/local/apache2/htdocs/var/www/task3/html>
 	    Options Indexes FollowSymLinks
 	    AllowOverride All
 	    Require all granted
 	</Directory>
-
+        <FilesMatch \.php$>
+            SetHandler application/x-httpd-php
+        </FilesMatch>
 	ErrorLog /usr/local/apache2/logs/error.log
 	CustomLog /usr/local/apache2/logs/access.log combined
 </VirtualHost>
