--- a/Docker/Apache_Conf/Dockerfile
+++ b/Docker/Apache_Conf/Dockerfile
@@ -1,24 +1,13 @@
-# FROM httpd:2.4.62-alpine
+FROM php:8.1-apache
 
-# RUN apk update
+COPY ./var/var/www/task3/html/ /var/www/html/
 
-# COPY ./000-default.conf /usr/local/apache2/conf/
+RUN chown -R www-data:www-data /var/www/html \
+    && sed -i 's/80/8080/g' /etc/apache2/sites-available/000-default.conf \
+    && sed -i 's/80/8080/g' /etc/apache2/ports.conf \
+    && echo 'DirectoryIndex info.php' >> /etc/apache2/sites-available/000-default.conf
 
-# COPY ./var/var/www/ /usr/local/apache2/htdocs/
+EXPOSE 8080
 
-# RUN mkdir -p /usr/local/apache2/logs && \
-#     chown -R www-data:www-data /usr/local/apache2/htdocs/ /usr/local/apache2/logs && \
-#     chmod -R 755 /usr/local/apache2/htdocs/ /usr/local/apache2/logs
-
-# USER www-data
-
-# EXPOSE 8080
-
-# CMD ["httpd-foreground"]
-FROM ubuntu 
-RUN apt update 
-RUN apt install -y apache2 
-RUN apt install -y apache2-utils 
-RUN apt clean
-EXPOSE 80
-CMD [“apache2ctl”, “-D”, “FOREGROUND”]
+USER www-data
+CMD ["apache2-foreground"]
