--- a/Docker/Nginx_Conf/Task12/Dockerfile
+++ b/Docker/Nginx_Conf/Task12/Dockerfile
@@ -1,8 +1,5 @@
 FROM nginx:1.26.2-alpine
 
-RUN apk update
-RUN rm /etc/nginx/conf.d/default.conf
-
 COPY ./nginx/conf.d/* /etc/nginx/conf.d/
 COPY ./letsencrypt/ /etc/letsencrypt/
 COPY ./var/www/ /var/www/
@@ -13,5 +10,4 @@ RUN chown -R nginx:nginx /etc/nginx /etc/letsencrypt /var/www /var/cache/nginx/ 
 
 USER nginx
 
-EXPOSE 443
-EXPOSE 80
+EXPOSE 443 80
