--- a/Docker/Nginx_Conf/Task12/nginx/conf.d/main.conf
+++ b/Docker/Nginx_Conf/Task12/nginx/conf.d/main.conf
@@ -7,7 +7,7 @@ upstream redblue {
 server {
     listen 443 ssl;
     listen [::]:443 ssl;    
-    server_name 54.226.183.243 musiify.site;
+    server_name musiify.site;
     root /var/www/task3/html;
     index status.html index.html index.htm index.nginx-debian.html secondpage.html imagesnew.jpeg images.png testjpeg.jpeg testpng.png;
     ssl_certificate /etc/letsencrypt/fullchain.pem; # managed by Certbot
@@ -24,7 +24,7 @@ server {
     }
 
     location /info.php {
-        proxy_pass http://custom-apache:8080/info.php;
+        proxy_pass http://127.0.0.1:8080/info.php;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -68,11 +68,10 @@ server {
     }
 }
 server {
-    listen 80;
-    server_name 54.226.183.243 musiify.site;
+    listen 80; 
+    server_name musiify.site;
     root /var/www/task3/html;
     index status.html index.html index.htm index.nginx-debian.html secondpage.html imagesnew.jpeg images.png testjpeg.jpeg testpng.png;
-
     location / {
         try_files $uri $uri/ =404;
     }
@@ -82,7 +81,7 @@ server {
     }
 
     location /info.php {
-        proxy_pass http://custom-apache:8080/info.php;
+        proxy_pass http://127.0.0.1:8080/info.php;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
