Change Docker-compose and DockerFIle for Nginx

--- a/Docker/Nginx_Conf/Task12/Dockerfile
+++ b/Docker/Nginx_Conf/Task12/Dockerfile
@@ -5,9 +5,9 @@ COPY ./letsencrypt/ /etc/letsencrypt/
 COPY ./var/www/ /var/www/
 COPY ./nginx/nginx.conf /etc/nginx/
 
-# RUN chown -R nginx:nginx /etc/nginx /etc/letsencrypt /var/www /var/cache/nginx/ /var/log/nginx /run && \ Может не работать если деплоишь в AWS 
-#    chmod -R 755 /etc/nginx /etc/letsencrypt /var/www /var/cache/nginx/ /var/log/nginx /run Может не работать если деплоишь в AWS 
+RUN chown -R nginx:nginx /etc/nginx /etc/letsencrypt /var/www /var/cache/nginx/ /var/log/nginx /run && \ 
+    chmod -R 755 /etc/nginx /etc/letsencrypt /var/www /var/cache/nginx/ /var/log/nginx /run
 
-# Может не работать если деплоишь в AWS | USER nginx
+USER nginx
 
 EXPOSE 443 80
