--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "jenkins"]
 	path = jenkins
-	url = https://github.com/XXXDESHXXX/JenkinsFile.git
+	url = git@github.com:XXXDESHXXX/JenkinsFile.git
